# clarify

./: .gitignore  README.md  SPEC.md  pyproject.toml
.cache/parsed/: 1502.03167.json  1512.03385.json  1706.03762.json  1810.04805.json  2010.11929.json
.claude/: launch.json
.claude/skills/clarify-extract/: SKILL.md
.github/ISSUE_TEMPLATE/: annotation-pr.md  request-paper.md
.github/workflows/: pages.yml
clarify/: build_static.py  cache.py  cli.py  discover.py  extract.py  fetch.py  figures.py  ingest.py  main.py  parse.py  render.py  schema.py
clarify/cli/: __init__.py  _helpers.py  extract.py  inspect.py  serve.py
clarify/prompts/: extract_claims.md
clarify/static/: arxiv-search.js  index.html  lightbox.js  panel.js  reader.css  reader.html  reader.js
clarify/static/css/: base.css  chrome.css  gallery.css  panel.css  paper.css  responsive.css
docs/: coverage.md  discover.json  extract-prompt.md
eval/: README.md  run_eval.py
eval/annotations/: 1502.03167.json  1706.03762.json  1810.04805.json
extractions/: 1502.03167.json  1706.03762.json  1810.04805.json  2010.11929.json
tests/: test_schema.py
tools/: export_drafts.py
worker/: README.md  package.json  wrangler.toml
worker/src/: index.js
