[project]
name = "clarify"
version = "0.1.0"
description = "Single-paper claim extractor with adaptive reading overlay."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "pydantic>=2.9",
    "arxiv>=2.1",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.scripts]
clarify = "clarify.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clarify"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
